--- a/views/student.ejs
+++ b/views/student.ejs
@@ -8,10 +8,61 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Hello, <%= student.name%> </title>
   </head>
   <body>
-    <h1>Benvenuto Utente <%=user%> a <%=title%>!</h1>
+    <div class="row">
+      <div class="col-sm">
+          <img src="https://www.unicam.it/sites/default/files/LogoUnicam.png" />
+      </div>
+      <div class="col-sm">
+      </div>
+
+    </div>
+
+    <h1>Benvenuto Utente <%= student.name%>  <%= student.surname%>!</h1>
+
+    <div class="container">
+      <!-- Content here-->
+
+      <div class="row">
+        <div class="col-sm">
+          <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item">
+                <a href="/">Home</a>
+              </li>
+              <li class="breadcrumb-item">
+                <a href="#">Library</a>
+              </li>
+              <li class="breadcrumb-item active" aria-current="page">Data</li>
+
+            </ol>
+
+          </nav>
+
+        </div>
+        <div class="col-6">
+          <ul>
+            <ul>
+              
+                <%= student.name%>
+                <%= student.surname%>
+
+            </ul>
+          </ul>
+        </div>
+        <div class="col-sm">
+
+        </div>
+
+      </div>
+
+
+
+    </div>
+
+
 
     <!-- Optional JavaScript; choose one of the two! -->
 
