--- a/views/students.ejs
+++ b/views/students.ejs
@@ -8,31 +8,73 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Welcome to Students Page</title>
   </head>
   <body>
     <h1>Benvenuto Utente </h1>
     <h2>Nella tua sessione privata  e pagina utente personale !</h2>
 
     <div class="container">
-      <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">#</th>
-              <th scope="col">Nome</th>
-              <th scope="col">Cognome</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% students_data.forEach(function(student){ %>
+
+      <div class="row">
+        <div class="col-sm">
+          <img src="https://www.unimc.it/@@site-logo/unimc-logo.png" />
+
+        </div>
+        <div class="col-sm">
+
+        </div>
+
+      </div>
+
+      <div class="row">
+        <div class="col-sm">
+          <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item">
+                <a href="/">Home</a>
+              </li>
+              <li class="breadcrumb-item">
+                <a href="/logout">Logout</a>
+              </li>
+            </ol>
+
+          </nav>
+        </div>
+        <div class="col-6">
+          <div class="alert alert-primary" role="alert">
+            Elenco degli student presenti
+          </div>
+
+          <table class="table">
+            <thead>
               <tr>
-                <td class="align-baseline"><%= student.id %></td>
-                <td class="align-top"><%= student.name %></td>
-                <td class="align-top"><%= student.surname %></td>
+                  <th scope="col">#</th>
+                  <th scope="col">Nome</th>
+                  <th scope="col">Cognome</th>
+
               </tr>
-            <%  }); %>
-          </tbody>
-      </table>
+            </thead>
+            <tbody>
+              <% students_data.forEach(function(student){ %>
+                <tr>
+                  <td class="align-baseline"><a href="/student/<%= student.id %>"><%= student.id %></a></td>
+                  <td class="align-top"><%= student.name %></td>
+                  <td class="align-top"><%= student.surname %></td>
+                </tr>
+              <%  }); %>
+
+            </tbody>
+
+          </table>
+
+        </div>
+        <div class="col-sm">
+
+        </div>
+
+      </div>
+      
     </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
