--- a/views/student.ejs
+++ b/views/student.ejs
@@ -13,9 +13,23 @@
   <body>
     <div class="row">
       <div class="col-sm">
-          <img src="https://www.unicam.it/sites/default/files/LogoUnicam.png" />
+          <img src="https://www.unimc.it/@@site-logo/unimc-logo.png" />
       </div>
       <div class="col-sm">
+      </div>
+      <div class="col-sm">
+        <nav aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+              <a href="/">Home</a>
+            </li>
+            <li class="breadcrumb-item">
+              <a href="/logout">Logout</a>
+            </li>
+
+          </ol>
+
+        </nav>
       </div>
 
     </div>
@@ -29,9 +43,7 @@
         <div class="col-sm">
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item">
-                <a href="/">Home</a>
-              </li>
+              
               <li class="breadcrumb-item">
                 <a href="#">Library</a>
               </li>
@@ -40,8 +52,8 @@
             </ol>
 
           </nav>
-
         </div>
+
         <div class="col-6">
           <ul>
             <ul>
